--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .wrapper {
   display: grid;
   grid-template-columns: 385px 815px;
-  gap: 40px;
+  gap: 50px;
   margin: 20px;
   font-family: Inter;
-  line-height: 38px;
+  line-height: 16px;
   size: 32px;
 }
 .contacts {
@@ -13,7 +13,6 @@
 
 .information {
   font-family: Inter;
-
   color: #000000;
 }
 .minor {
@@ -21,12 +20,24 @@
   text-align: left;
   width: 334px;
 }
+.skills {
+  width: 659px;
+  height: 184px;
+}
 img {
   width: 382px;
   height: 297px;
 }
 hr {
-  border: solid 5px #1e1e1e;
+  width: 85%;
+  margin-left: 0%;
+  border: solid 3px #1e1e1e;
+}
+p {
+  font-size: 16px;
+}
+h1 {
+  font-size: 36px;
 }
 .name {
   margin: 40px;
