--- a/styles.css
+++ b/styles.css
@@ -10,4 +10,32 @@ label {
   box-sizing: border-box;
   max-width: 1024 px;
   text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: medium;
+}
+input[type="submit"] {
+  background-color: #0048d8;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0px 5px 10px #828282;
+  cursor: pointer;
+  width: 95px;
+  height: 34px;
+  padding: 10px;
+  margin: 10px 0;
+  font-family: "Roboto", sans-serif;
+  color: antiquewhite;
+  font-size: large;
+  text-align: center;
+}
+input[type="submit"]:hover {
+  background-color: #002266;
+}
+input[type="submit"]:disabled {
+  background-color: #8cacee;
+}
+input[type="submit"]:focus {
+  background-color: white;
+  border: 1px solid #0048d8;
+  transition: all 0.3s ease 0s;
 }
