added css to valid email

--- a/formstyles.css
+++ b/formstyles.css
@@ -85,7 +85,7 @@ textarea {
   padding: 0.5rem 0.75rem;
   border-radius: 10px;
 }
-input[type="email"]:checked {
+input[type="email"]:required:valid {
   border-color: green;
 }
 
