--- a/formstyles.css
+++ b/formstyles.css
@@ -16,13 +16,15 @@ label {
 
 .contact_form {
   display: block;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 80%;
+  height: 60%;
   box-sizing: border-box;
   border-radius: 5px;
-  max-width: 1024 px;
+
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: medium;
@@ -37,7 +39,7 @@ textarea,
   border-radius: 5px;
   margin: 20px;
   background-color: rgb(225, 225, 230);
-  max-width: 400px;
+  max-width: 460px;
   width: 100%;
   outline: none;
 }
@@ -101,8 +103,7 @@ footer {
   display: block;
   position: absolute;
   bottom: 0;
-  left: 50%;
-
+  left: 47%;
   text-align: center;
-  padding: 10px;
+  padding: 5px;
 }
