--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,29 @@
   display: grid;
   grid-template-columns: 385px 815px;
   gap: 50px;
-  margin: 20px;
+  margin: 10px;
   font-family: Inter;
   line-height: 16px;
   size: 32px;
 }
 .contacts {
+  display: block;
+  position: fixed;
+  top: 0;
+  max-width: 30%;
+  height: 900px;
+  margin-top: 0;
+  padding: 10px;
   background-color: #86a3b4;
 }
 
 .information {
-  font-family: Inter;
+  display: block;
+  position: absolute;
+  top: 0;
+  max-width: 60%;
+  right: 20px;
+  padding: 10px;
   color: #000000;
 }
 .minor {
@@ -43,7 +55,17 @@ h1 {
   margin: 40px;
 }
 footer {
-  text-align: center;
-  padding: 10px;
+  background-color: #86a3b4;
+  border: 1px solid rgb(110, 110, 172);
+  opacity: 0.85;
+  border-radius: 5px;
+  padding: 5px;
+  text-decoration: none;
   margin: 10px;
+  display: absolute;
+  position: fixed;
+  bottom: 0;
+  left: 47%;
+  text-align: center;
+  padding: 5px;
 }
