--- a/formstyles.css
+++ b/formstyles.css
@@ -103,7 +103,7 @@ footer {
   display: block;
   position: absolute;
   bottom: 0;
-  left: 47%;
+  right: 0;
   text-align: center;
   padding: 5px;
 }
