--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+:root {
+  --distance-small: 5px;
+  --distance-medium: 10px;
+  --distance-large: 40px;
+}
+.main-theme {
+  --bg-color: #86a3b4;
+  --heads-color: #000000;
+  --text-color: #263036;
+  --footer-bg-color: #86a3b4;
+  --footer-side-color: rgb(110, 110, 172);
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: 385px 815px;
@@ -6,6 +19,7 @@
   font-family: Inter;
   line-height: 16px;
   size: 32px;
+  color: var(--text-color);
 }
 .contacts {
   display: block;
@@ -31,6 +45,12 @@
   margin: 40px;
   text-align: left;
   width: 334px;
+}
+.skills,
+.summary,
+.experience,
+.education {
+  margin: 40px;
 }
 .skills {
   width: 659px;
@@ -59,13 +79,13 @@ footer {
   border: 1px solid rgb(110, 110, 172);
   opacity: 0.85;
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px;
   text-decoration: none;
   margin: 10px;
   display: absolute;
   position: fixed;
   bottom: 0;
-  left: 47%;
+  right: 0;
   text-align: center;
   padding: 5px;
 }
