--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,53 @@
 :root {
   --distance-small: 5px;
   --distance-medium: 10px;
-  --distance-large: 40px;
+  --distance-standard: 20px;
+  --distance-large: 50px;
+  --distance-none: 0;
 }
 .main-theme {
   --bg-color: #86a3b4;
   --heads-color: #000000;
   --text-color: #263036;
   --footer-bg-color: #86a3b4;
+  --border-main-color: #1e1e1e;
   --footer-side-color: rgb(110, 110, 172);
+  --name-color: white;
+  --surname-color: rgb(11, 11, 112);
 }
-
+#name {
+  color: var(--name-color);
+}
+#surname {
+  color: var(--surname-color);
+}
 .wrapper {
   display: grid;
   grid-template-columns: 385px 815px;
-  gap: 50px;
-  margin: 10px;
+  gap: var(--distance-large);
+  margin: var(--distance-medium);
   font-family: Inter;
-  line-height: 16px;
   size: 32px;
-  color: var(--text-color);
 }
 .contacts {
   display: block;
   position: fixed;
-  top: 0;
+  top: var(--distance-none);
   max-width: 30%;
   height: 900px;
-  margin-top: 0;
-  padding: 10px;
-  background-color: #86a3b4;
+  margin-top: var(--distance-none);
+  padding: var(--distance-medium);
+  background-color: var(--bg-color);
 }
 
 .information {
   display: block;
   position: absolute;
-  top: 0;
+  top: var(--distance-none);
   max-width: 60%;
   right: 20px;
   padding: 10px;
-  color: #000000;
+  color: var(--text-color);
 }
 .minor {
   margin: 40px;
@@ -50,7 +58,7 @@
 .summary,
 .experience,
 .education {
-  margin: 40px;
+  margin: var(--distance-large);
 }
 .skills {
   width: 659px;
@@ -63,7 +71,7 @@ img {
 hr {
   width: 85%;
   margin-left: 0%;
-  border: solid 3px #1e1e1e;
+  border: solid 3px var(--border-main-color);
 }
 p {
   font-size: 16px;
@@ -75,17 +83,15 @@ h1 {
   margin: 40px;
 }
 footer {
-  background-color: #86a3b4;
-  border: 1px solid rgb(110, 110, 172);
+  background-color: var(--footer-bg-color);
+  border: 1px solid var(--footer-side-color);
   opacity: 0.85;
   border-radius: 5px;
-  padding: 10px;
+  padding: var(--distance-medium);
   text-decoration: none;
-  margin: 10px;
-  display: absolute;
+  margin: var(--distance-medium);
   position: fixed;
   bottom: 0;
   right: 0;
-  text-align: center;
-  padding: 5px;
+  padding: var(--distance-small);
 }
