--- a/styles.css
+++ b/styles.css
@@ -24,30 +24,35 @@
 .wrapper {
   display: grid;
   height: 100vh;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 0.4fr 2fr;
+  grid-template-rows: auto;
+  grid-template-areas: "sidebar" "main";
   gap: var(--distance-large);
   margin: var(--distance-medium);
   font-family: Inter;
   size: 32px;
 }
-.contacts {
-  grid-area: contacts;
-  display: block;
+.name {
+  grid-area: name;
+}
+
+.sidebar {
+  grid-area: sidebar;
   position: fixed;
   top: var(--distance-none);
+  height: 100%;
   max-width: 30%;
-  height: 900px;
   margin-top: var(--distance-none);
   padding: var(--distance-medium);
   background-color: var(--bg-color);
 }
 
-.information {
-  grid-area: information;
-  display: block;
+.main {
+  grid-area: main;
+
   position: absolute;
-  top: var(--distance-none);
   max-width: 60%;
+  top: var(--distance-none);
   right: 20px;
   padding: 10px;
   color: var(--text-color);
@@ -56,7 +61,7 @@
   grid-area: minor;
   margin: 40px;
   text-align: left;
-  width: 334px;
+  max-width: 334px;
 }
 .skills,
 .summary,
@@ -72,17 +77,17 @@
 }
 .experience {
   grid-area: experience;
+  max-width: 100%;
 }
 .skills {
   grid-area: skills;
-  width: 659px;
-  height: 184px;
+  max-width: 659px;
 }
 img {
   grid-area: photo;
-  max-width: 100%;
-  width: 382px;
-  height: 297px;
+
+  max-width: 382px;
+  max-height: 297px;
 }
 hr {
   max-width: 85%;
@@ -117,13 +122,7 @@ footer {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
-      "contacts"
-      "photo"
-      "minor"
-      "summary"
-      "skills"
-      "experience"
-      "education"
-      "footer";
+      "sidebar"
+      "main";
   }
 }
