--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@
 
 .main {
   grid-area: main;
-
   position: absolute;
   max-width: 60%;
   top: var(--distance-none);
@@ -120,9 +119,15 @@ footer {
 @media screen and (max-width: 550px) {
   .wrapper {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas:
       "sidebar"
       "main";
+  }
+  .main {
+    max-width: 100%;
+  }
+  .sidebar {
+    max-width: 100%;
   }
 }
