--- a/styles.css
+++ b/styles.css
@@ -139,3 +139,9 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 }
+.experience p {
+  opacity: 0.7;
+}
+.experience p:hover {
+  opacity: 1;
+}
