--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ footer {
     box-shadow: none;
   }
 }
-@media screen and (max-width: 1366px) {
+@media screen and (min-width: 600px) {
   .sidebar {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
