--- a/formstyles.css
+++ b/formstyles.css
@@ -40,8 +40,11 @@ textarea,
   outline: none;
   text-align: left;
 }
-input[type="text"]:focus {
-  border: 2px solid blue;
+input[type="text"]:focus,
+select:focus,
+input[type="submit"]:focus #message:focus,
+input[type="email"]:focus {
+  border: 2px rgb(70, 70, 224);
 }
 input[type="submit"] {
   background-color: #0048d8;
@@ -57,6 +60,7 @@ input[type="submit"] {
   color: antiquewhite;
   font-size: large;
   text-align: center;
+  margin: 0 auto;
 }
 input[type="submit"]:hover {
   background-color: #002266;
@@ -65,9 +69,7 @@ input[type="submit"]:hover {
   border: 1px solid #0048d8;
   transition: all 0.3s ease 0s;
 }
-#message:focus {
-  border-color: rgb(70, 70, 224);
-}
+
 input[type="submit"]:disabled {
   background-color: #8cacee;
 }
@@ -75,10 +77,6 @@ input[type="submit"]:focus {
   background-color: white;
   border: 1px solid #0048d8;
   transition: all 0.3s ease 0s;
-}
-
-input[type="email"]:focus {
-  border-color: rgb(70, 70, 224);
 }
 
 input[type="text"],
@@ -123,10 +121,10 @@ footer {
   border: none;
   box-shadow: 0px 5px 10px #b4afaf;
   cursor: pointer;
-  width: 6rem;
+  width: 5rem;
   height: 2rem;
-  padding: 10px;
-  margin: 10px 0;
+  padding-top: 10px;
+  margin: 0 auto;
   font-family: "Roboto", sans-serif;
   text-decoration: antiquewhite;
   font-size: large;
