--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,18 @@
   --distance-large: 50px;
   --distance-none: 0;
 }
+
+.my-theme {
+  --bg-color: #f5f5f5;
+  --heads-color: #333;
+  --text-color: #666;
+  --footer-bg-color: #333;
+  --border-main-color: #ccc;
+  --footer-side-color: #222;
+  --name-color: #555;
+  --surname-color: #444;
+}
+
 .main-theme {
   --bg-color: #86a3b4;
   --heads-color: #000000;
@@ -15,25 +27,29 @@
   --name-color: white;
   --surname-color: rgb(11, 11, 112);
 }
+
 #name {
   color: var(--name-color);
 }
+
 #surname {
   color: var(--surname-color);
 }
+
 .wrapper {
   display: grid;
   height: 100vh;
   grid-template-columns: 0.4fr 1fr;
-
   grid-template-areas: "sidebar" "main";
   gap: var(--distance-large);
   margin: var(--distance-medium);
   font-family: Inter;
-  size: 32px;
+  font-size: 32px;
 }
+
 .name {
   grid-area: name;
+  margin: var(--distance-large);
 }
 
 .sidebar {
@@ -56,35 +72,41 @@
   padding: 10px;
   color: var(--text-color);
 }
+
 .minor {
   grid-area: minor;
   margin: 40px;
   text-align: left;
   max-width: 334px;
 }
+
 .skills,
 .summary,
 .experience,
 .education {
   margin: var(--distance-large);
 }
+
 .summary {
   grid-area: summary;
 }
+
 .education {
   grid-area: education;
 }
+
 .experience {
   grid-area: experience;
   max-width: 100%;
 }
+
 .skills {
   grid-area: skills;
   max-width: 659px;
 }
+
 img {
   grid-area: photo;
-
   max-width: 382px;
   max-height: 297px;
 }
@@ -94,15 +116,15 @@ hr {
   margin-left: 0%;
   border: solid 3px var(--border-main-color);
 }
+
 p {
   font-size: 16px;
 }
+
 h1 {
   font-size: 36px;
 }
-.name {
-  margin: 40px;
-}
+
 footer {
   grid-area: footer;
   background-color: var(--footer-bg-color);
@@ -116,18 +138,37 @@ footer {
   bottom: 0;
   right: 0;
   padding: var(--distance-small);
+  color: white;
 }
 @media screen and (max-width: 550px) {
   .wrapper {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-      "sidebar"
-      "main";
+    grid-template-rows: auto auto;
+    grid-template-areas: "sidebar" "main";
+    gap: var(--distance-medium);
   }
+
   .sidebar {
-    box-shadow: none;
+    position: static;
+    max-width: 100%;
+    height: auto;
+    margin-top: var(--distance-medium);
+    margin-bottom: var(--distance-medium);
+    padding: var(--distance-medium);
+  }
+
+  .main {
+    position: static;
+    max-width: 100%;
+    margin-top: var(--distance-medium);
+    margin-bottom: var(--distance-medium);
+    padding: var(--distance-medium);
+  }
+
+  .minor {
+    margin: var(--distance-medium);
+    max-width: 100%;
   }
 }
 @media screen and (min-width: 600px) {
@@ -135,7 +176,7 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
   .photo:hover {
-    transform: scale(1.8);
+    transform: scale(1.5) translateX(20%);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 }
