added animation effect when you hover the picture

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,9 @@ footer {
   .sidebar {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
+  .photo {
+    transition: transform 0.3s ease-out;
+  }
   .photo:hover {
     transform: scale(1.5) translateX(20%);
     box-shadow: rgba(0, 0, 0, 0.7) 0px 8px 20px;
