--- a/formstyles.css
+++ b/formstyles.css
@@ -19,7 +19,9 @@ label {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(2);
+  opacity: 0;
+  animation: formAnimation 1s ease-in-out forwards 0.5s;
   width: 80%;
   height: 60%;
   box-sizing: border-box;
@@ -28,6 +30,16 @@ label {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: medium;
+}
+@keyframes formAnimation {
+  from {
+    transform: translate(-50%, -50%) scale(2);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
 }
 
 input,
