--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@
   --surname-color: $additional-color;
 }
 
+#name {
+  color: var(--name-color);
+}
+
+#surname {
+  color: var(--surname-color);
+}
+
 .wrapper {
   font-family: Inter;
   font-size: 32px;
@@ -29,4 +37,169 @@
   grid-template-areas: "sidebar" "main";
   gap: 50px;
   margin: 10px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.name {
+  grid-area: name;
+  margin: 50px;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  position: fixed;
+  max-width: 30%;
+  top: 0;
+  height: 100%;
+  margin-top: 0;
+  padding: var(--distance-medium);
+  background-color: var(--bg-color);
+}
+
+.minor,
+.main {
+  opacity: 0;
+  transform: translateY(50px);
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.main {
+  grid-area: main;
+  position: absolute;
+  max-width: 60%;
+  top: 0;
+  right: 20px;
+  padding: 10px;
+  color: var(--text-color);
+  animation-name: slideInUp;
+  animation-delay: 1s;
+}
+
+.minor {
+  grid-area: minor;
+  margin: 40px;
+  text-align: left;
+  max-width: 334px;
+  animation-name: slideInUp;
+  animation-delay: 0.5s;
+}
+
+@keyframes slideInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.skills,
+.summary,
+.experience,
+.education {
+  margin: 50px;
+}
+
+.summary {
+  grid-area: summary;
+}
+
+.education {
+  grid-area: education;
+}
+
+.experience {
+  grid-area: experience;
+  max-width: 100%;
+}
+
+.skills {
+  grid-area: skills;
+  max-width: 659px;
+}
+
+img {
+  grid-area: photo;
+  max-width: 382px;
+  max-height: 297px;
+}
+
+hr {
+  max-width: 85%;
+  margin-left: 0%;
+  border: solid 3px var(--border-main-color);
+}
+
+p {
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+footer {
+  grid-area: footer;
+  background-color: var(--footer-bg-color);
+  border: 1px solid var(--footer-side-color);
+  opacity: 0.85;
+  border-radius: 5px;
+  padding: 10px;
+  text-decoration: none;
+  margin: 10px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  padding: var(--distance-small);
+  color: white;
+}
+
+@media screen and (max-width: 550px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: "sidebar" "main";
+    gap: 10px;
+  }
+  .sidebar {
+    position: static;
+    max-width: 100%;
+    height: auto;
+    margin-top: var(--distance-medium);
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+  .main {
+    position: static;
+    max-width: 100%;
+    margin-top: var(--distance-medium);
+    margin-bottom: var(--distance-medium);
+    padding: var(--distance-medium);
+  }
+  .minor {
+    margin: var(--distance-medium);
+    max-width: 100%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .sidebar {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .photo {
+    transition: transform 0.3s ease-out;
+  }
+  .photo:hover {
+    transform: scale(1.5) translateX(20%);
+    box-shadow: rgba(0, 0, 0, 0.7) 0px 8px 20px;
+  }
+}
+.experience p {
+  opacity: 0.7;
+  transition: opacity 0.6s ease-in-out;
+}
+
+.experience p:hover {
+  opacity: 1;
+} /*# sourceMappingURL=style.css.map */
