--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-@import "customTheme";
-@import "main-theme";
+@import "./customTheme";
+@import "./main-theme";
 
 $distance-small: 5px;
 $distance-medium: 10px;
