--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ $distance-large: 50px;
 $distance-none: 0;
 $border-color: black;
 
-.l {
+.navigationLetter {
   border-radius: 3px;
   border: 1px solid $border-color;
   padding: $distance-small;
