--- a/style.scss
+++ b/style.scss
@@ -198,7 +198,8 @@ footer {
   .photo {
     transition: transform 0.3s ease-out;
   }
-  .photo:hover {
+
+  .photo.animate {
     transform: scale(1.5) translateX(20%);
     box-shadow: rgba(0, 0, 0, 0.7) 0px 8px 20px;
   }
